// Copyright IBM Corp. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

option go_package = "github.com/hyperledger-labs/orion-server/pkg/types";

package types;

import "block_and_transaction.proto";

message GetDBStatusQueryEnvelope {
  GetDBStatusQuery payload = 1;
  bytes signature = 2;
}

message GetDBStatusQuery {
  string user_id = 1;
  string db_name = 2;
}

message GetDBIndexQueryEnvelope {
  GetDBIndexQuery payload = 1;
  bytes signature = 2;
}

message GetDBIndexQuery {
  string user_id = 1;
  string db_name = 2;
}

message GetDataQueryEnvelope {
  GetDataQuery payload = 1;
  bytes signature = 2;
}

message GetDataQuery {
  string user_id = 1;
  string db_name = 2;
  string key = 3;
}

message GetDataRangeQuery {
  string user_id = 1;
  string db_name = 2;
  string start_key = 3;
  string end_key = 4;
  uint64 limit = 5;
}

message GetUserQueryEnvelope {
  GetUserQuery payload = 1;
  bytes signature = 2;
}

message GetUserQuery {
  string user_id = 1;
  string target_user_id = 2;
}

message GetConfigQueryEnvelope {
  GetConfigQuery payload = 1;
  bytes signature = 2;
}

message GetConfigQuery {
  string user_id = 1;
}

message GetNodeConfigQueryEnvelope {
  GetNodeConfigQuery payload = 1;
  bytes signature = 2;
}

message GetNodeConfigQuery {
  string user_id = 1;
  string node_id = 2;
}

message GeConfigBlockQueryEnvelope {
  GetConfigBlockQuery payload = 1;
  bytes signature = 2;
}

message GetConfigBlockQuery {
  string user_id = 1;
  uint64 block_number = 2;
}

message GetClusterStatusQueryEnvelope {
  GetClusterStatusQuery payload = 1;
  bytes signature = 2;
}

message GetClusterStatusQuery {
  string user_id = 1;
  bool noCertificates = 2;
}


//========= Part II Provenance API queries

message GetBlockQuery {
  string user_id = 1;
  uint64 block_number = 2;
  bool augmented = 3;
}

message GetBlockQueryEnvelope {
  GetBlockQuery payload = 1;
  bytes signature = 2;
}

message GetLastBlockQuery {
  string user_id = 1;
}

message GetLastBlockQueryEnvelope {
  GetLastBlockQuery payload = 1;
  bytes signature = 2;
}

message GetLedgerPathQuery {
  string user_id = 1;
  uint64 start_block_number = 2;
  uint64 end_block_number = 3;
}

message GetLedgerPathQueryEnvelope {
  GetLedgerPathQuery payload = 1;
  bytes signature = 2;
}

message GetTxProofQuery {
  string user_id = 1;
  uint64 block_number = 2;
  uint64 tx_index = 3;
}

message GetTxProofQueryEnvelope {
  GetTxProofQuery payload = 1;
  bytes signature = 2;
}

message GetDataProofQuery {
  string user_id = 1;
  uint64 block_number = 2;
  string db_name = 3;
  string key = 4;
  bool is_deleted = 5;
}

message GetDataProofQueryEnvelope {
  GetDataProofQuery payload = 1;
  bytes signature = 2;
}

message GetHistoricalDataQuery {
  string user_id = 1;
  string db_name = 2;
  string key = 3;
  Version version = 4;
  string direction = 5;
  bool only_deletes = 6;
  bool most_recent = 7;
}

message GetHistoricalDataQueryEnvelope {
  GetHistoricalDataQuery payload = 1;
  bytes signature = 2;
}

message GetDataReadersQuery {
  string user_id = 1;
  string db_name = 2;
  string key = 3;
}

message GetDataReadersQueryEnvelope {
  GetDataReadersQuery payload = 1;
  bytes signature = 2;
}

message GetDataWritersQuery {
  string user_id = 1;
  string db_name = 2;
  string key = 3;
}

message GetDataWritersQueryEnvelope {
  GetDataWritersQuery payload = 1;
  bytes signature = 2;
}

message GetDataReadByQuery {
  string user_id = 1;
  string target_user_id = 2;
}

message GetDataReadByQueryEnvelope {
  GetDataReadByQuery payload = 1;
  bytes signature = 2;
}

message GetDataWrittenByQuery {
  string user_id = 1;
  string target_user_id = 2;
}

message GetDataDeletedByQuery {
  string user_id = 1;
  string target_user_id = 2;
}

message GetDataDeletedByQueryEnvelope {
  GetDataDeletedByQuery payload = 1;
  bytes signature = 2;
}

message GetDataWrittenByQueryEnvelope {
  GetDataWrittenByQuery payload = 1;
  bytes signature = 2;
}

message GetTxIDsSubmittedByQuery {
  string user_id = 1;
  string target_user_id = 2;
}

message GetTxIDsSubmittedByQueryEnvelope {
  GetTxIDsSubmittedByQuery payload = 1;
  bytes signature = 2;
}

message GetTxReceiptQuery {
  string user_id = 1;
  string tx_id = 2;
}

message GetTxReceiptQueryEnvelope {
  GetTxReceiptQuery payload = 1;
  bytes signature = 2;
}

message GetTxContentQuery {
  string user_id = 1;
  uint64 block_number = 2;
  uint64 tx_index = 3;
}

message GetTxContentQueryEnvelope {
  GetTxContentQuery payload = 1;
  bytes signature = 2;
}

message GetMostRecentUserOrNodeQuery {
    enum Type {
        USER = 0;
        NODE = 1;
    }
    Type type = 1;
    string user_id = 2;
    string id = 3;
    Version  version = 4;
}

message DataJSONQuery {
    string user_id = 1;
    string db_name = 2;
    string query = 3;
}
